README edited online with Bitbucket

--- a/README
+++ b/README
@@ -3,3 +3,4 @@ Module "App" - some playground stuff
 Module "DB ROI extraction" - automated hand vein database roi extraction procedure
 Module "Veins" - An experimental setup, where an alpha version of a mobile ROI extraction is used
 Module "Regex" - a helper for renaming purposes or other things
+Module "java" - a copy paste of OpenCV library, instead a dependency can be set
